@@ -1307,13 +1307,28 @@ public abstract class AbstractSBase extends AbstractTreeNode implements SBase {
 			throw new PropertyNotAvailableException(TreeNodeChangeEvent.metaId, this);
 		}
 		SBMLDocument doc = getSBMLDocument();
-		if ((doc != null) && doc.containsMetaId(metaId)) {
-			throw new IdentifierException(this, metaId);
-		}
 		String oldMetaId = this.metaId;
-		this.metaId = metaId;
 		if (doc != null) {
-			doc.registerMetaId(this, true);
+			// We have to first remove the pointer from the old metaId to this SBase
+			if (oldMetaId != null) {
+				doc.registerMetaId(this, false);
+			}
+			// Now we can register the new metaId if necessary.
+			if (metaId != null) {
+				this.metaId = metaId;
+				if (!doc.registerMetaId(this, true)) {
+					// register failed. Revert the change and throw an exception:
+					this.metaId = oldMetaId;
+					throw new IdentifierException(this, metaId);
+				}
+			}
+		} else {
+			// If the document is null, we don't have to register anything. Simply change:
+			this.metaId = metaId;
+		}
+		if (isSetAnnotation()) {
+			// Propagate the change also to the annotation:
+			getAnnotation().setAbout('#' + metaId);
 		}
 		firePropertyChange(TreeNodeChangeEvent.metaId, oldMetaId, metaId);
 	}
