@@ -439,7 +439,7 @@ public class ListOf<T extends SBase> extends AbstractSBase implements List<T> {
 		ArrayList<T> removedElements = listOf;
 		listOf.clear();
 		for( T element : removedElements){
-			((AbstractTreeNode) element).fireNodeRemovedEvent();
+			((TreeNodeWithChangeSupport) element).fireNodeRemovedEvent();
 		}
 	}
 
@@ -718,7 +718,7 @@ public class ListOf<T extends SBase> extends AbstractSBase implements List<T> {
 	 */
 	public T remove(int index) {
 		T t = listOf.remove(index);
-		((AbstractTreeNode) t).fireNodeRemovedEvent();
+		((TreeNodeWithChangeSupport) t).fireNodeRemovedEvent();
 		return t;
 	}
 
@@ -763,7 +763,7 @@ public class ListOf<T extends SBase> extends AbstractSBase implements List<T> {
 		}
 		SBase sbase = (SBase) o;
 		if (listOf.remove(sbase)) {
-			((AbstractTreeNode) o).fireNodeRemovedEvent();
+			((TreeNodeWithChangeSupport) o).fireNodeRemovedEvent();
 			return true;
 		}
 		return false;
@@ -791,7 +791,7 @@ public class ListOf<T extends SBase> extends AbstractSBase implements List<T> {
 			}
 			if (pos >= 0) {
 				T element = listOf.remove(pos);
-				((AbstractTreeNode) element).fireNodeRemovedEvent();
+				((TreeNodeWithChangeSupport) element).fireNodeRemovedEvent();
 				return (T) sbase;
 			}
 		}
@@ -806,7 +806,7 @@ public class ListOf<T extends SBase> extends AbstractSBase implements List<T> {
 		boolean success = listOf.removeAll(c);
 		if(success){
 			 for(Iterator<?> i = c.iterator(); i.hasNext();){
-				 AbstractTreeNode element = (AbstractTreeNode) i.next();
+				 TreeNodeWithChangeSupport element = (TreeNodeWithChangeSupport) i.next();
 				 element.fireNodeRemovedEvent();
 			 }
 		}
@@ -847,7 +847,7 @@ public class ListOf<T extends SBase> extends AbstractSBase implements List<T> {
 		for(T element : listOf){
 			if (!c.contains(element)) {
 				listOf.remove(element);
-				((AbstractTreeNode) element).fireNodeRemovedEvent();
+				((TreeNodeWithChangeSupport) element).fireNodeRemovedEvent();
 				modified = true;
 			}
 		}
@@ -863,7 +863,7 @@ public class ListOf<T extends SBase> extends AbstractSBase implements List<T> {
 		// TODO: this should rather be a firePropertyChangedEvent, as the 
 		// element is first removed and then added again. But the method
 		// setThisAsParentSBMLObject fires a NodeAddedEvent
-		((AbstractTreeNode) element).fireNodeRemovedEvent();
+		((TreeNodeWithChangeSupport) element).fireNodeRemovedEvent();
 		setThisAsParentSBMLObject(element);
 		return prevElem;
 	}
